remove @SupressWarnings from UserHistoryResource and UserHistoryService